# PAT_twice

./: CMakeLists.txt  README.md
chapter1 simple simulation/: A1002 A+B forpolynomials.cpp  A1042 shuffling machine.cpp  B1001 3n+1 guess.cpp  B1011 A+B and C.cpp  B1011 A+B and C.py  B1012 number classification.py  B1016 part A+B.py  B1026 program run time.py  B1046 finger-guessing game.py  test.py
chapter1.2 find element/: A1011 world cup betting.cpp  A1036 boys vs girls.cpp  B1032 which dig school is best.cpp  B1041 test num.cpp
chapter1.3 print shape/: A1031 hello world for u.cpp  B1027 print sandglass.cpp  B1036 learn with obama.cpp
chapter1.5 radix change/: A1027 colors in mars.cpp  A1058 A + B in hogwarts.cpp  B1037 hogwards change.cpp
chapter1.6 deal string/: A1001 A+B format.py  A1005 spell it right.py  A1035 password.cpp  A1077 kuchiguse.py  B1002 write this number.py  B1006 change posture to print integer.cpp  B1021 count every bit.py
chapter2.1 sort/: A1012 the best rank.cpp  A1025 PAT ranking.cpp  A1028 list sorting.cpp  A1055 the world's richest.cpp  A1083 list grades.cpp  B1015 moral VS talent.cpp
chapter2.2 hash/: A1041 be unique.cpp  A1048 find coins.cpp  A1050 string subtraction.cpp  A1112 stucked keyboard.cpp  B1005 another 3n+1.cpp  B1005 continue 3n+1.cpp  B1029 old keyboard.cpp  B1029 old keyboard.py  B1033 type with old keyboard.cpp  B1038 count same score.cpp  B1039 buy or not.cpp  B1043 print PATest.cpp  B1047 code team competition.cpp
chapter2.4 greedy/: A1037 magic coupon.cpp  A1070 mooncake.cpp  B1020 mooncake.cpp  B1023 combine a mimimum number.cpp
chapter2.5 dichotomy/: B1030 perfect array.cpp
chapter3.1 simple math/: A1008 elevator.cpp  A1049 counting ones.cpp  B1019 data hole.cpp  the sequance sum of array.cpp
chapter3.2 GCD and LCM/: B1008 loop right move.py
charper 1.2 find element/: A1006 sign in and sign out.cpp  B1004 score rank.cpp  B1041 test num.py  (+1 more)
(+16 files in other folders)
